<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="8dp"
    android:id="@+id/list_item">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        app:cardCornerRadius="12dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#CE010B13">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:src="@drawable/books"
            android:contentDescription="@string/iv_logo"/>

        </LinearLayout>

        <LinearLayout

            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_judul"
                android:text="@string/ed_judul"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_author"
                android:layout_marginTop="8dp"
                android:text="@string/ed_author"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_tahun"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:text="@string/ed_tahun"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_harga"
                android:layout_marginTop="8dp"
                android:text="@string/ed_harga"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="8dp">

            <TextView
                android:id="@+id/judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tahun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/harga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="6dp">

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#28EC1A"
                    android:text="@string/btn_update" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_delete"
                    android:layout_marginStart="15dp"
                    android:id="@+id/btn_delete"
                    android:backgroundTint="#FF2424"
                    android:layout_toEndOf="@id/btn_update"/>

            </RelativeLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>